# sst-macro

./: .gitignore  .gitmodules
docker/build-multiplatform/: README.md  centos75.dockerfile  docker_build.sh  ubuntu1804.dockerfile
docker/build-tools/: docker_build.sh  sstcxx.dockerfile  sstmac.dockerfile  sstmac_build.dockerfile
docs/manual/figures/topologies/: fattree4-tapered.graffle
skeletons/traffic/: README.md  TrafficFigure.graffle
sprockit/: Makefile.am
sstmac/clang_replacements/: mpi.h
sstmac/common/: Makefile.am
sstmac/common/messages/: flow.h  library_message.h  timed_event.h
sstmac/hardware/: Makefile.am  Makefile.in~
sstmac/hardware/common/: packet.cc  packet.h  packetizer.cc  packetizer.h  recv_cq.cc
sstmac/hardware/logp/: logp_nic.cc  logp_switch.cc  logp_switch.h
sstmac/hardware/network/: network_message.cc  network_message.h
sstmac/hardware/nic/: nic.cc  nic.h
sstmac/hardware/pisces/: pisces.h  pisces_arbitrator.cc  pisces_crossbar.cc  pisces_crossbar.h  pisces_memory_model.cc  pisces_memory_model.h  pisces_nic.h  pisces_packetizer.cc  pisces_packetizer.h
sstmac/hardware/router/: dragonfly_plus_routing.cc  dragonfly_plus_routing_plain.cc  dragonfly_routing.cc
sstmac/hardware/sculpin/: sculpin.h  sculpin_nic.cc
sstmac/hardware/topology/: dfly_group_wiring.cc  dfly_group_wiring.cc~  dfly_group_wiring.h  dfly_group_wiring.h~  dragonfly.cc  dragonfly.h  dragonfly_plus.cc  dragonfly_plus.h
sstmac/libraries/sumi/: distributed_service.cc  distributed_service.h  message.h  sumi.cc  sumi.h  sumi_transport.cc  sumi_transport.h  sumi_transport_fwd.h
sstmac/llvm/: Makefile.am  meminst.cc  memtrace2.cc  memtraceTools.cc  memtraceTools.h
sstmac/main/: sstmac.cc
sstmac/replacements/: fixIntrinsics.h
sstmac/skeletons/test/: service_test.cc
sstmac/skeletons/traffic_matrix/: main.cc
sstmac/skeletons/undumpi/: parsedumpi.cc
sstmac/software/: Makefile.am  Makefile.in~
sstmac/software/ami/: ami.cc
sstmac/software/api/: api.cc
sstmac/software/launch/: rdr_dfly_allocation.cc  rdr_dfly_allocation.cc~  rdr_dfly_allocation.h  rdr_dfly_allocation.h~
sstmac/software/libraries/: unblock_event.h
sstmac/software/libraries/compute/: compute_event.h
sstmac/software/process/: compute_scheduler.h  operating_system.cc  operating_system.h
sstmac/test_skeletons/: mpi_coverage_test.cc  mpi_ping_all.cc
sumi/: Makefile.am  allgather.cc  allgatherv.cc  allreduce.cc  alltoall.cc  alltoallv.cc  bcast.cc  collective.cc  collective.h  collective_actor.cc  collective_actor.h  collective_message.cc  collective_message.h  collective_message_fwd.h  communicator.cc  communicator.h  dynamic_tree_vote.cc  dynamic_tree_vote.h  gather.cc  gatherv.cc  message.cc  message.h  monitor.cc  monitor.h  partner_timeout.cc  partner_timeout.h  ping.cc  ping.h  reduce.cc  reduce_scatter.cc  scan.cc  scatter.cc  scatterv.cc  transport.cc  transport.h  transport_fwd.h
sumi-mpi/: mpi_api.cc  mpi_api.h  mpi_api_collectives.cc  mpi_api_win.cc  mpi_integers.h  mpi_message.cc  mpi_message.h  sstmac_mpi.cc  sstmac_mpi.h  sstmac_mpi_macro.h
sumi-mpi/mpi_protocol/: eager0.cc  eager1.cc  rendezvous_rdma.cc
sumi-mpi/mpi_queue/: mpi_queue.cc  mpi_queue.h
tests/: Makefile.api_tests  Makefile.clang_tests
tests/api/mpi/: Makefile.am  testmpi.cc
tests/api/mpi/attr/: attrorder.cc
tests/api/mpi/coll/: testlist
tests/api/mpi/include/: mpitest.h  mpitestcxx.h
tests/api/mpi/rma/: acc_loc.cc  acc_ordering.cc  acc_pairtype.cc  accfence1.cc  accfence2.cc  accfence2_am.cc  accpscw1.cc  accumulate.cc  adlb_mimic1.cc  aint.cc  allocmem.cc  at_complete.cc  atomic_get.cc  atomic_rmw_cas.cc  atomic_rmw_fop.cc  atomic_rmw_gacc.cc  attrorderwin.cc  badrma.cc  baseattrwin.cc  compare_and_swap.cc  contention_put.cc  contention_putget.cc  contig_displ.cc  derived_acc_flush_local.cc  epochtest.cc  fence_shm.cc  fetch_and_op.cc  fetchandadd.cc  fetchandadd_am.cc  fetchandadd_tree.cc  fetchandadd_tree_am.cc  fkeyvalwin.cc  flush.cc  get.cc  get_acc_local.cc  get_accumulate.cc  get_struct.cc  getfence1.cc  getgroup.cc  large_acc_flush_local.cc  (+101 more)
tests/api/mpi/util/: mtest.cc
tests/clang_src2src/: pragma_sst_annotate.cc  pragma_sst_lift.cc
tests/sumi/: barrier.cc  big_tree.cc  box_domain.cc  collective.cc  deadlock.cc  domain.cc  failure.cc  replica.cc  saturation.cc
tests/unit_tests/: test_serializable.cc
tests/unit_tests/hardware/: test_packet_flow.cc
tests/unit_tests/util/: util.cc  util.h
